--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
   workflow_dispatch:  
 
@@ -23,7 +23,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
-    name: Python ${{ matrix.python-version }} lint
+    name: Python ${{ matrix.python-version }} ci
     steps:
       - uses: actions/checkout@v3
 
